--- a/OldDriverManagerV2/wwwroot/index.html
+++ b/OldDriverManagerV2/wwwroot/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WpfBlazor</title>
+    <title>OldDriverManagerV2</title>
     <base href="/" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
-    <link href="WpfBlazor.styles.css" rel="stylesheet" />
+    <link href="OldDriverManagerV2.styles.css" rel="stylesheet" />
 </head>
 
 <body>
